--- a/src/App.css
+++ b/src/App.css
@@ -152,7 +152,7 @@
   .main-page nav a:hover {
     text-decoration: underline;
   }
-  
+
   /* Add styles for the textarea and file input */
 form textarea {
     width: 100%;
@@ -202,3 +202,63 @@ form textarea {
     text-align: center;
     color: #888;
   }
+  .user-post-image {
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+  }
+  
+
+
+  /* 
+   */
+
+   .activity {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .activity-feed {
+    width: 100%;
+    max-width: 600px; /* Adjust the width as needed */
+    margin-top: 20px;
+  }
+  
+  .activity-item {
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    padding: 15px;
+    text-align: center;
+  }
+  
+  .user-post-image {
+    width: 100%; /* Full width of the container */
+    height: auto; /* Keep the original aspect ratio */
+    border-radius: 8px;
+    margin-bottom: 10px; /* Space between image and text */
+  }
+  
+  .blog-text {
+    margin-top: 10px;
+    font-size: 1em;
+    color: #333;
+  }
+  
+  .date {
+    margin-top: 5px;
+    font-size: 0.8em;
+    color: #666;
+  }
+  
+  .no-activity {
+    font-size: 1em;
+    color: #666;
+  }
+  
+  .error-message {
+    color: red;
+  }
+  
