--- a/src/App.css
+++ b/src/App.css
@@ -280,3 +280,48 @@ form textarea {
     background-color: #17701a;
     font-weight: bold;
   }
+  /* src/app.css */
+.feed {
+  padding: 20px;
+}
+
+.search-bar {
+  margin-bottom: 20px;
+}
+
+.search-bar select {
+  margin-right: 10px;
+  width: 10%;
+}
+.search-bar input {
+  margin-right: 10px;
+  width: 35%;
+}
+.search-bar button {
+  margin-right: 10px;
+  width: 10%;
+}
+
+.post {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 20px;
+  width: 35%;
+}
+.feed .posts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.post img {
+  width: 60%;
+  height: auto;
+  margin-top: 10px;
+  
+}
+.post video {
+  width: 60%;
+  height: auto;
+  margin-top: 10px;
+}
