--- a/src/App.css
+++ b/src/App.css
@@ -21,36 +21,21 @@
   border-bottom: 3px solid #7c43bd; /* Border color adjusted to match the new background */
 }
 
-.login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1; /* Allows container to fill available space */
-}
-
-.login-form {
-  padding: 40px;
-  background: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-  margin: 20px 0; /* Add margin to separate from header/footer */
-}
 
 /* Rest of your existing styles for login form, inputs, and buttons */
 
 .inactive-button {
   background-color: transparent;
   color: #007bff;
-  padding: 10px 20px;
+  padding: 15px 30px; /* Increase padding for a larger button */
   border: 2px solid #007bff;
   border-radius: 4px;
-  margin: 20px auto; /* Center the button */
-  display: block; /* Make the button a block element */
-  font-size: 16px;
+  margin: 0 auto; /* Center the button */
+  display: block; /* Ensure the button is a block element */
+  font-size: 18px; /* Increase font size */
   cursor: pointer;
   transition: all 0.3s ease;
-  margin-top: 20px;
+  /* Remove margin-top if you want the button closer to the form */
 }
 
 .inactive-button:hover {
