--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,19 +1,24 @@
 .login-container {
+    margin-top: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%; /* Ensure it takes full width */
-    flex-grow: 1;
+    height: auto; /* Changed from min-height */
+  padding: 20px;
+  background-color: #f4f4f4;
+  overflow-y: auto;
+  flex-direction: column; 
   }
   
   .login-form {
-    margin: 20px; /* Adjust margin */
-    padding: 40px;
     background: #fff;
+    padding: 40px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 400px;
     width: 100%;
+    text-align: center;
+    margin-bottom: 10px;
   }
   
   .login-form h2 {
@@ -48,5 +53,10 @@
   .login-message {
     margin-bottom: 20px;
     color: red;
+  }
+
+  body, html {
+    padding: 0;
+    margin: 0;
   }
   
